# nw-tools

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml
crates/cry-chunk/: Cargo.toml
crates/cry-chunk/examples/: dump.rs
crates/cry-chunk/src/: lib.rs  model.rs  payload.rs  scan.rs
crates/cry-chunk/src/payload/: route.rs
crates/nw-asset/: CHANGELOG.md  Cargo.toml
crates/nw-asset/src/: catalog.rs  lib.rs  store.rs
crates/nw-catalog/: CHANGELOG.md  Cargo.toml
crates/nw-catalog/src/: lib.rs
crates/nw-datasheet/: CHANGELOG.md  Cargo.toml
crates/nw-datasheet/src/: lib.rs
crates/nw-dds/: CHANGELOG.md  Cargo.toml
crates/nw-dds/benches/: decode.rs
crates/nw-dds/src/: container.rs  lib.rs
crates/nw-filesystem/: CHANGELOG.md  Cargo.toml
crates/nw-filesystem/src/: lib.rs
crates/nw-jobs/: CHANGELOG.md  Cargo.toml
crates/nw-jobs/src/: lib.rs
crates/nw-localization/: CHANGELOG.md  Cargo.toml
crates/nw-localization/src/: lib.rs
crates/nw-locator/: CHANGELOG.md  Cargo.toml
crates/nw-locator/src/: lib.rs
crates/nw-model/: Cargo.toml
crates/nw-model/examples/: to_glb.rs
crates/nw-model/src/: geometry.rs  gltf.rs  lib.rs  material.rs  math.rs
crates/nw-objectstream/: CHANGELOG.md  Cargo.toml
crates/nw-objectstream/src/: asset_id.rs  asset_reference.rs  binary.rs  component_id.rs  deserialize.rs  lib.rs  lookup.rs  object.rs  query.rs  region_slice_data.rs  serialize.rs  slice_meta.rs  stats.rs  type_uuid.rs  types.rs  value.rs  visit.rs
crates/nw-pak/: CHANGELOG.md  Cargo.toml  build.rs
crates/nw-pak/src/: archive.rs  azcs.rs  crypak.rs  crypak_format.rs  decompress.rs  extract.rs  inspection.rs  lib.rs  oodle.rs  search.rs  shape.rs
crates/nw-resources/: CHANGELOG.md  Cargo.toml
crates/nw-resources/src/: lib.rs
crates/nw-serialize-codegen/: Cargo.toml
crates/nw-serialize-codegen/resources/typescript/viteplus/: package.json  vite.config.ts
crates/nw-serialize-codegen/src/: catalog.rs  class_registration.rs  compiler.rs  completion.rs  context.rs  dependency_graph.rs  document.rs  field_evidence.rs  field_projection.rs  generate.rs  graph.rs  ir.rs  layout.rs  lib.rs  lint.rs  model.rs  module_descriptors.rs  naming.rs  native.rs  network_rust.rs  network_schema.rs  reference.rs  role.rs  selection.rs  support_usage.rs  symbol_surface.rs  types.rs  value.rs
crates/nw-serialize-codegen/src/compiler/: compile_unit.rs  diagnostics.rs  error.rs  input.rs  view.rs
crates/nw-serialize-codegen/src/component_scaffold/: api.rs  edit.rs  evidence.rs  existing.rs  existing_patch.rs  mod.rs  module_plan.rs  module_render.rs  naming.rs  source_render.rs  type_model.rs
crates/nw-serialize-codegen/src/go/: layout.rs  mod.rs  source.rs  support.rs  types.rs
crates/nw-serialize-codegen/src/go/source/: error.rs  project.rs
crates/nw-serialize-codegen/src/layout/: analysis.rs  base.rs  order.rs  path.rs  relation.rs  root.rs  scope.rs  semantic.rs  tests.rs  type_path.rs
crates/nw-serialize-codegen/src/model/: parser.rs  tests.rs  types.rs
crates/nw-serialize-codegen/src/rust/: analyze.rs  derive_plan.rs  enum_plan.rs  field_plan.rs  identity.rs  item_plan.rs  layout.rs  mod.rs  name_plan.rs  options.rs  plan.rs  scope_plan.rs  source.rs  support.rs  types.rs
crates/nw-serialize-codegen/src/rust/integrate/: identity.rs  mod.rs  source_index.rs
crates/nw-serialize-codegen/src/rust/source/: error.rs  project.rs
crates/nw-serialize-codegen/src/schema/: generated.rs  mod.rs
crates/nw-serialize-codegen/src/typescript/: layout.rs  source.rs  support.rs  types.rs
crates/nw-serialize-codegen/src/typescript/source/: error.rs  project.rs
crates/nw-serialize-codegen/src/typescript/source/project/: index.rs  package.rs  type_file.rs
crates/nw-serialize-codegen/tests/: self_contained_outputs.rs
crates/nw-tools/: CHANGELOG.md  Cargo.toml  build.rs
crates/nw-tools/drizzle/20260625083523_violet_stone_men/: migration.sql  snapshot.json
crates/nw-tools/drizzle/20260625085402_uneven_spectrum/: migration.sql  snapshot.json
crates/nw-tools/drizzle/20260625102458_glamorous_timeslip/: migration.sql  snapshot.json
crates/nw-tools/src/: asset.rs  cache.rs  extract.rs  formats.rs  fuzzy.rs  jobs.rs  main.rs  model.rs  output.rs  pak.rs  progress.rs  source.rs  support.rs
crates/nw-tools/src/format/: catalog.rs  common.rs  datasheet.rs  datasheet_browser.rs  dds.rs  mod.rs  objectstream.rs
crates/nw-tools/src/tui/: app.rs  datasheet.rs  dds.rs  mod.rs  sheets.rs  table.rs  tree.rs
crates/nw-tools/src/ui/: image.rs  mod.rs  print.rs  report.rs  theme.rs
docs/: network-schema-codegen.md
resources/: behavior-context.7z
resources/modules/: amazon-games-sdk-module.json  bink-module.json  camera-module.json  cry-hooks-module.json  cry-legacy-animation-module.json  cry-legacy-module.json  footsteps-module.json  frame-profiler-event-handler-module.json  graphics-reflect-context-module.json  historical-input-module.json  hitch-tracker-module.json  im-gui-module.json  input-management-framework-module.json  javelin-collision-filters-module.json  javelin-components-ai-module.json  javelin-components-character-module.json  krag-module.json  lmbr-central-module.json  ly-shine-module.json  maestro-module.json  module.json  music-sheet-module.json  new-world-data-sheet-module.json  platform-services-module.json  profanity-filter-module.json  rad-telemetry-module.json  rain-gem.json  roads-and-rivers-module.json  rock-n-roll-module.json  scripted-entity-tweener-module.json  slayer-script-gem.json  snow-gem.json  spectator-mode-module.json  texture-atlas-module.json  water-module.json  watermark-module.json
scripts/ghidra/: AzReflectionRenamer.java  NetworkSchemaExtractor.java  README.md  ReplicatedStateSchemaExtractor.java  RmiDispatchMapper.java
