[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/themixednuts/nw-tools"
publish = false

[workspace.lints.clippy]
correctness = { level = "deny" }
suspicious = { level = "deny" }
complexity = { level = "warn" }
perf = { level = "warn" }
style = { level = "warn" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["local-offset"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
arcstr = { version = "1.2.0", features = ["serde"] }
crc32fast = "1.5.0"
dashmap = "6.2.1"
flate2 = "1.1.9"
hex = "0.4.3"
humansize = "2.1.3"
ktx2 = "0.5.0"
memmap2 = "0.9.10"
quick-xml = { version = "0.40.1", features = ["serialize"] }
rayon = "1.12.0"
signal-hook = "0.4.4"
uuid = { version = "1.23.3", features = ["serde"] }
vk2dfd = "0.1.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
nw-asset = { path = "crates/nw-asset" }
nw-catalog = { path = "crates/nw-catalog" }
nw-datasheet = { path = "crates/nw-datasheet" }
nw-dds = { path = "crates/nw-dds" }
nw-filesystem = { path = "crates/nw-filesystem" }
nw-jobs = { path = "crates/nw-jobs" }
nw-objectstream = { path = "crates/nw-objectstream" }
nw-pak = { path = "crates/nw-pak" }
nw-resources = { path = "crates/nw-resources" }
