[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/themixednuts/nw-tools"
publish = false

[workspace.lints.clippy]
correctness = { level = "deny" }
suspicious = { level = "deny" }
complexity = { level = "warn" }
perf = { level = "warn" }
style = { level = "warn" }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
blake3 = "1.8.2"
clap = { version = "4.6.1", features = ["derive", "env"] }
gofmt = "0.1"
heck = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
thiserror = "2.0.18"
time = { version = "0.3.49", features = ["local-offset"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
arcstr = { version = "1.2.0", features = ["serde"] }
arrayvec = "0.7"
glam = { version = "0.32", features = ["serde"] }
bevy_math = { version = "0.19", default-features = false, features = ["std"] }
crc32fast = "1.5.0"
flate2 = "1.1.9"
hex = "0.4.3"
humansize = "2.1.3"
crossterm = "0.29.0"
ktx2 = "0.5.0"
memmap2 = "0.9.10"
oxc_allocator = "0.135"
oxc_codegen = { version = "0.135", default-features = false }
oxc_parser = { version = "0.135", default-features = false }
oxc_span = "0.135"
prettyplease = "0.2"
proc-macro2 = "1"
quick-xml = { version = "0.40.1", features = ["serialize"] }
quote = "1"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm_0_29"] }
ratatui-image = { version = "11.0.5", default-features = false, features = ["crossterm"] }
rayon = "1.12.0"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
signal-hook = "0.4.4"
syn = { version = "2", features = ["full", "parsing"] }
tempfile = "3"
uuid = { version = "1.23.3", features = ["serde"] }
vk2dfd = "0.1.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
treesitter-types-go = "0.2"
treesitter-types-cpp = "0.2"
cry-chunk = { version = "0.1.0", path = "crates/cry-chunk" }
nw-asset = { version = "0.1.0", path = "crates/nw-asset", default-features = false }
nw-datasheet = { version = "0.1.0", path = "crates/nw-datasheet" }
nw-dds = { version = "0.1.0", path = "crates/nw-dds" }
nw-filesystem = { version = "0.1.0", path = "crates/nw-filesystem" }
nw-locator = { version = "0.1.0", path = "crates/nw-locator" }
nw-model = { version = "0.1.0", path = "crates/nw-model" }
nw-jobs = { version = "0.1.0", path = "crates/nw-jobs" }
nw-localization = { version = "0.1.0", path = "crates/nw-localization" }
nw-objectstream = { version = "0.1.0", path = "crates/nw-objectstream", default-features = false }
nw-pak = { version = "0.1.0", path = "crates/nw-pak", default-features = false }
nw-resources = { version = "0.1.0", path = "crates/nw-resources" }
