[package]
name = "cry-chunk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Borrowed parser for Cry/Lumberyard chunk-file containers (.cgf, .skin, .chr)"

[lints]
workspace = true

[dependencies]
arrayvec.workspace = true
thiserror.workspace = true
