[package]
name = "nw-asset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nw-filesystem.workspace = true
nw-pak.workspace = true
sha1.workspace = true
thiserror.workspace = true
uuid.workspace = true
