[package]
name = "nw-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nw-asset.workspace = true
thiserror.workspace = true
uuid.workspace = true
