[package]
name = "nw-datasheet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
nw-localization.workspace = true
serde.workspace = true
thiserror.workspace = true
