[package]
name = "nw-dds"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
vk2dfd.workspace = true

[dev-dependencies]
ktx2.workspace = true
