[package]
name = "nw-jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rayon.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tracing.workspace = true
