[package]
name = "nw-localization"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
crc32fast.workspace = true
nw-asset = { workspace = true, features = ["oodle"] }
quick-xml.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
