[package]
name = "nw-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Assemble Cry chunk meshes into editable glTF source assets"

[lints]
workspace = true

[dependencies]
bevy_math = { workspace = true }
cry-chunk = { path = "../cry-chunk" }
glam = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
