[package]
name = "nw-objectstream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arcstr.workspace = true
crc32fast.workspace = true
hex.workspace = true
nw-asset.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
thiserror.workspace = true
uuid.workspace = true
