[package]
name = "nw-serialize-codegen"
version = "0.1.0"
edition.workspace = true
description = "Compiler-style SerializeContext parser, linter, semantic catalog, and codegen primitives"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
gofmt = { workspace = true }
heck = { workspace = true }
nw-jobs = { workspace = true }
nw-objectstream = { workspace = true }
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rayon = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
treesitter-types-go = { workspace = true }
treesitter-types-cpp = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
blake3 = { workspace = true }
tempfile = { workspace = true }
