[package]
name = "nw-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
humansize.workspace = true
nw-asset.workspace = true
nw-datasheet.workspace = true
nw-dds.workspace = true
nw-filesystem.workspace = true
nw-locator.workspace = true
nw-jobs.workspace = true
nw-localization.workspace = true
nw-objectstream.workspace = true
nw-pak.workspace = true
nw-resources.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
