[package]
name = "nw-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cry-chunk.workspace = true
crossterm.workspace = true
humansize.workspace = true
nw-asset = { workspace = true, features = ["oodle"] }
nw-datasheet.workspace = true
nw-dds.workspace = true
nw-filesystem.workspace = true
nw-locator.workspace = true
nw-model.workspace = true
nw-jobs.workspace = true
nw-localization.workspace = true
nw-objectstream = { workspace = true, features = ["oodle"] }
nw-pak = { workspace = true, features = ["oodle"] }
nw-resources.workspace = true
ratatui.workspace = true
ratatui-image.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
frizbee = "0.9.0"
arboard = { version = "3.6.1", default-features = false }
image = { version = "0.25.10", default-features = false, features = ["png"] }
base64 = "0.22.1"
uuid.workspace = true
drizzle = { version = "0.1.9", features = ["rusqlite"] }
rusqlite = { version = "0.37", features = ["bundled"] }

[build-dependencies]
drizzle-migrations = "0.1.9"
drizzle-types = "0.1.9"
